# crust

./: .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  server-setup.sh  tailwind.config.js
.github/workflows/: deploy.yml
migrations/: 20250920223147_create_users_table.sql  20250923220741_create_country_table.sql  20250925214540_create_rbac_tables.sql  20251226205906_create_blog_table.sql  20251226205924_create_announcements_table.sql
public/scripts/: components.js  modal.js  tooltip.js
public/styles/: main.css  secondary.css
src/: error.rs  lib.rs  main.rs  prelude.rs
src/application/: announcement_service.rs  blog_service.rs  country_service.rs  mod.rs  rbac.rs  rbac_service.rs  user_service.rs
src/domain/: announcement.rs  audit_user.rs  blog.rs  country.rs  mod.rs  rbac.rs  user.rs
src/domain/content/: mod.rs
src/domain/forms/: mod.rs
src/extract/: admin_user.rs  current_user.rs  maybe_current_user.rs  mod.rs  no_user.rs  real_ip.rs
src/filters/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/audit/: geolocation.rs
src/infrastructure/auth/: google.rs  mod.rs
src/routes/: admin.rs  auth.rs  blog.rs  homepage.rs  mod.rs  payments.rs  webhooks.rs
src/util/: htmx.rs  mod.rs  pagination.rs  rbac.rs
templates/: dashboard.html  homepage.html  privacy.html  terms.html
templates/_partials/: app_drawer.html  footer.html  meta.html  modal.html  navbar.html  scripts.html  tooltip.html
templates/admin/: countries.html  users.html  view_user.html
templates/blog/: _blog_form.html  blog.html  blogs.html  edit_blog.html  new_blog.html
(+15 files in other folders)
