[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie", "form", "query"] }
chrono = { version = "0.4.42", features = ["clock"] }
dotenv = "0.15.0"
serde = "1.0.225"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-native-tls", "sqlite"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["compression-full", "fs", "set-header"] }
